--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<!--<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>-->
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/jedidiah-pienkny-2001/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/jpie-2001" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="https://www.instagram.com/jedpienkny/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-wordpress"><span class="label">WordPress</span></a></li>
 										
